--- a/part3/phonebook_backend/package.json
+++ b/part3/phonebook_backend/package.json
@@ -9,13 +9,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../phonebook_frontend && npm run build --prod && cp -r build ../phonebook_backend/",
     "deploy": "fly deploy",
-    "deploy:full": "npm run build:ui && npm run deploy",    
+    "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "fly logs"
   },
   "author": "Phi Dang",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongodb": "^5.4.0",
+    "mongoose": "^7.1.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
