--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -11,13 +11,16 @@
   "author": "Phi Dang",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "loadash": "^1.0.0",
     "lodash": "^4.17.21",
-    "mongoose": "^7.2.1"
+    "mongoose": "^7.2.1",
+    "mongoose-unique-validator": "^4.0.0"
   },
   "devDependencies": {
     "jest": "^29.5.0",
