--- a/part7/ultimate-hooks/package.json
+++ b/part7/ultimate-hooks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "routed-anecdotes",
+  "name": "ultimate-hooks",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,12 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "server": " npx json-server --watch db.json --port 3005",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.2",
@@ -20,6 +21,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "json-server": "^1.0.0-alpha.23",
     "vite": "^5.4.9"
   }
 }
